--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <h2>ようこそ！</h2>
     <p>株式会社ぬくぬくゆるゆるは運送業界でうんち💩を提供しています。</p>
-    <img src="company.jpg" alt="会社の写真" width="400">
+    <img src="Unchi.jpg" alt="会社の写真" width="400">
   </main>
 
   <footer>
